Correct code following comments of Kevin and some sonar warnings